--- a/templates/index.html
+++ b/templates/index.html
@@ -97,10 +97,10 @@
                         <li>Edit text notes</li>
                     </ul>
                     <ul>
-                        <li>Upload handwritten notes</li>
-                        <li>Sort notes by class session</li>
                         <li>Create new channels</li>
                         <li>Rate notes</li>
+                        <li>Post handwritten notes</li>
+                        <li>Sort notes by class session</li>
                     </ul>
                 </section>
                 <section>
