updating channel model and creating channel creation form mockup

--- a/static/css/channel.css
+++ b/static/css/channel.css
@@ -862,6 +862,10 @@ body.overlay-active .channel-overlay {
     display: none;
 }
 
+.channel-overlay input {
+    color: #222;
+}
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
