--- a/templates/channel.html
+++ b/templates/channel.html
@@ -3,7 +3,8 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="" xmlns="http://www.w3.org/1999/html"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -149,6 +150,50 @@
             </section>
             <section id="channel-overlay-create">
                 Create a new channel...
+                <form id="channel-creation-form" method="post">
+                    <p>
+                        <label>Prefix:</label> <input type="text">
+                    </p>
+                    <p>
+                        <label>Number:</label> <input type="number" placeholder="Number">
+                    </p>
+                    <p>
+                        <label>Section:</label> <input type="number" placeholder="Section">
+                    </p>
+                    <p>
+                        <label>Postfix:</label> <input type="text">
+                    </p>
+                    <p>
+                        <label>Title:</label> <input type="text">
+                    </p>
+                    <p>
+                        <label>Instructor:</label> <input type="text">
+                    </p>
+                    <p>
+                        <label>First class day:</label> <input type="text" placeholder="MM/DD/YYYY">
+                    </p>
+                    <p>
+                        <label>Last class day:</label> <input type="text" placeholder="MM/DD/YYYY">
+                    </p>
+                    <p>
+                        Meeting days:
+                        <input type="checkbox"> <label>Mon</label>
+                        <input type="checkbox"> <label>Tue</label>
+                        <input type="checkbox"> <label>Wed</label>
+                        <input type="checkbox"> <label>Thu</label>
+                        <input type="checkbox"> <label>Fri</label>
+                        <input type="checkbox"> <label>Sat</label>
+                    </p>
+                    <p>
+                        <label>Class start time:</label> <input type="text" placeholder="HH:mm">
+                    </p>
+                    <p>
+                        <label>Class end time:</label> <input type="text" placeholder="HH:mm">
+                    </p>
+                    <p>
+                        <input type="submit" value="Create channel">
+                    </p>
+                </form>
             </section>
         </aside>
 
