--- a/templates/channel.html
+++ b/templates/channel.html
@@ -151,6 +151,9 @@
             <section id="channel-overlay-create">
                 Create a new channel...
                 <form id="channel-creation-form" method="post">
+                    {% csrf_token %}
+                    {{ channel_form.as_p }}
+                    <hr>
                     <p>
                         <label>Prefix:</label> <input type="text">
                     </p>
