--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
                 <section>
                     <p>Built by students, for students. With Slam eNotes, it&rsquo;s easy to share digital lecture notes with your classmates.</p>
                     <ul class="actions">
-                        <li><a href="{% url 'channel'  %}" class="button special">{% if user.is_authenticated %}Take notes{% else %}Get started{% endif %}</a></li>
+                        <li><a href="channel/1" class="button special">{% if user.is_authenticated %}Take notes{% else %}Get started{% endif %}</a></li>
                     </ul>
                 </section>
             </div>
