Leading Zeroes fix.

--- a/templates/channel.html
+++ b/templates/channel.html
@@ -129,7 +129,7 @@
         <aside class="sidebar-container">
             <div id="channel-overlay-circle"></div>
             <div id="courses">
-                <h2 id="courses-menu-toggle" title="{{ channel.prefix }} {{ channel.course_number }}.{{ channel.section_number }} - {{ channel.title }}">{{ channel.prefix }} {{ channel.course_number }}.{{ channel.section_number }} - {{ channel.title }}</h2>
+                <h2 id="courses-menu-toggle" title="{{ channel.prefix }} {{ channel.course_number }}.{{ section_number }} - {{ channel.title }}">{{ channel.prefix }} {{ channel.course_number }}.{{ section_number }} - {{ channel.title }}</h2>
                 <div class="courses-other">
                     <h2 id="courses-add">Add new class</h2>
                 </div>
