ajax fixes for multi-channel

--- a/templates/channel.html
+++ b/templates/channel.html
@@ -14,7 +14,7 @@
         <link rel="apple-touch-icon" href="{% static 'images/apple-touch-icon.png' %}">
 
         <link rel="stylesheet" href="{% static 'css/normalize.min.css' %}">
-        <link rel="stylesheet" href="{% static 'css/channel.css' %}?1480904394">
+        <link rel="stylesheet" href="{% static 'css/channel.css' %}?1480999512">
         <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
         <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
     </head>
@@ -206,7 +206,8 @@
                 $("body").addClass("menu-closed");
 
 
-            var ajax_url = "{% url 'ajax' %}";
+            var AJAX_URL = "{% url 'ajax' %}";
+            var CHANNEL = {{ channel.pk }};
 
             var notes_changes = new Object();
             var last_update = new Date();
@@ -215,7 +216,7 @@
             user.is_superuser = {% if user.is_superuser %}true;{% else %}false;{% endif %}
             user.email = "{{ user.email }}";{% else %}false;{% endif %}
         </script>
-        <script src="{% static 'js/channel.js' %}?1480904394" onload="applyNoteActions();setTimeout(ajaxLiveUpdate, 5 * 1000);"></script>
+        <script src="{% static 'js/channel.js' %}?1480999512" onload="applyNoteActions();setTimeout(ajaxLiveUpdate, 5 * 1000);"></script>
         <script src="{% static 'js/vendor/commonmark.js' %}" onload="commonmarkParseAll();"></script>
     </body>
 </html>
