--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3402,6 +3402,10 @@
 			text-decoration: none;
 		}
 
+		#footer a:hover, #footer a:active {
+			text-decoration: underline;
+		}
+
 		@media screen and (max-width: 980px) {
 
 			#footer .copyright {
