--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                 <section>
                         {% if account_created %}
                     <p>
-                        Account created successfully. Activate your account using the link sent to your email address.
+                        Account created successfully.{% if not debug_enabled %} Activate your account using the link sent to your email address. {% endif %}
                     </p>
                         {% elif account_just_activated %}
                     <p>
@@ -118,7 +118,7 @@
 		<!-- Footer -->
         <footer id="footer">
             <div class="copyright">
-                &copy; Texas State University Software Engineering - Team Arctic 2016.
+                &copy; 2016 Texas State University Software Engineering - Team Arctic. Prism by <a href="https://templated.co">TEMPLATED</a>.
             </div>
         </footer>
 
